--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
       <div class="semicircle"></div>
       <div class="outermost-circle"></div>
     </div>
-
     <!-- Timer Code -->
+
+    <div class="timer-contianer center">
+      <div class="timer center">
+        
+      </div>
+    </div>
+
   </div>
 
 <script src="script.js"></script>
