--- a/index.html
+++ b/index.html
@@ -4,27 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pomodoro</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-  <div class="main-container center">
-    <!-- Progress Indicator Code -->
-    <div class="circle-container center">
-      <div class="semicircle"></div>
-      <div class="semicircle"></div>
-      <div class="semicircle"></div>
-      <div class="outermost-circle"></div>
-    </div>
-    <!-- Timer Code -->
-
-    <div class="timer-contianer center">
-      <div class="timer center">
-        
+  
+  <div class="background">
+    <div class="main-container center">
+      <!-- Progress Indicator Code -->
+      <div class="circle-container center">
+        <div class="semicircle"></div>
+        <div class="semicircle"></div>
+        <div class="semicircle"></div>
+        <div class="outermost-circle"></div>
       </div>
+      <!-- Timer Code -->
+
+      <div class="timer-contianer center">
+        <div class="timer center">
+
+        </div>
+      </div>
+
     </div>
-
   </div>
-
-<script src="script.js"></script>
+<script src="scripts/script.js"></script>
 </body>
 </html>
