Added Header with Logo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
   
+  
   <div class="background">
+    <div class="header center">
+      <button class="settings"></button>
+      <img class="logo" src="images/delta-logo.png" alt="Daedalus Library">
+    </div>
     <div class="main-container center">
       <!-- Progress Indicator Code -->
       <div class="circle-container center">
