added places for the lists class
change show btns to button types from divs

--- a/index.html
+++ b/index.html
@@ -30,6 +30,29 @@
         </div>
       </div>
 
+      <!-- Bottom Bar Tools -->
+
+      <footer class="bottom-bar">
+        <div class="tool-bench">
+
+          <div class="todo-list">
+            <div class="todo-entry">
+              <div class="todo-show-btn"></div>
+            </div>
+            <div class="todo-add"></div>
+          </div>
+
+          <div class="audio-bar"></div>
+
+          <div class="distraction-list">
+            <div class="distraction-add"></div>
+            <div class="distraction-entry">
+              <div class="distraction-show-btn"></div>
+            </div>
+          </div>
+
+        </div>
+      </footer>
     </div>
   </div>
 <script src="scripts/script.js"></script>
