--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
           <div class="distraction-list">
 
-            <form class="distraction-entry">
+            <form class="distraction-entry"> <!-- The form reloads the page restarting timer -->
               <button class="distraction-show-btn">^</button> <!-- This is going to pop-up list -->
               <input type="text" class="distraction-input">
               <button class="distraction-add"></button>
