--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <!-- Bottom Bar Tools -->
 
-      <footer class="bottom-bar">
+      <!-- <footer class="bottom-bar">
         <div class="tool-bench">
 
           <div class="todo-list">
@@ -51,15 +51,13 @@
           </div>
 
           <div class="audio-bar">
-            <!-- music bar -->
-            <!-- sound scape -->
-            <!-- envierment noise -->
+            
           </div>
 
           <div class="distraction-list">
 
-            <form class="distraction-entry"> <!-- The form reloads the page restarting timer -->
-              <button class="distraction-show-btn">^</button> <!-- This is going to pop-up list -->
+            <form class="distraction-entry"> 
+              <button class="distraction-show-btn">^</button> >
               <input type="text" class="distraction-input">
               <button class="distraction-add"></button>
             </form>
@@ -71,7 +69,7 @@
           </div>
 
         </div>
-      </footer>
+      </footer> -->
     </div>
   </div>
 <script src="scripts/script.js"></script>
